Started work on water
added the game objects and colliders + water scripts. still have to
change the water physics affecting the Player

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Health.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\RedGuy.cs" />
+     <Compile Include="Assets\Scripts\Water.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
