new scene for animation
added:
-simple scene setup (background, camera, etc.)
-sprites/spritesheets for dio
-created animation and animation controller
-dio script with physics, colliders, movement

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\DIO\dioCharacter.cs" />
      <Compile Include="Assets\Scripts\Ground.cs" />
      <Compile Include="Assets\Scripts\Health.cs" />
      <Compile Include="Assets\Scripts\Player States\IPlayerState.cs" />
